# ft_curriculum_milestones

./: .Makefile.swp  .ft_memset.c.swp  .ft_split.c.swp  .gitignore  1.xpm  2.xpm  CMakeLists.txt  Makefile  Map.hpp  README.md  TYPE_INT.h  a.out  count_islands  file2  file3  file6  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_backD.c  ft_lstadd_backS.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstclearD.c  ft_lstclearS.c  ft_lstdelone.c  ft_lstfirst.c  ft_lstfirstD.c  ft_lstiter.c  ft_lstiterD.c  ft_lstlast.c  ft_lstlastD.c  ft_lstmap.c  (+57 more)
.vscode_ildar/: c_cpp_properties.json
01 libft/: ft_isalpha.c  ft_putstr_fd.c  libft.h
02 get_next_line/: .gitignore  Makefile  get_next_line.h
03 ft_printf/: ft_printf.c
05 fdf/: Makefile
06 push_swap/: .gitignore  Makefile
08 philosophers/: README.md  main.c
09 minishell/: main.c
10 cub3d/: README.md  map.cub
11 cppmodules/: README.md
12 ft_containers/: .gitignore  vector.hpp
13 ft_irc/: .gitignore
14 inception/: README.md
actions/: actions.c  align.c
count_islands/: README.md  main.c  map
cub3d/: .gitignore  back.xpm  keycodes.txt  main.c
def_utils/: cd.c  echo.c  pwd.c
divide/: divide.c  mark.c
fdf/: README.md
ft_printf/: README.md
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
include/: count_islands.h  cub3d.h  iterator.hpp  iterator_traits.hpp  reverse_iterator.hpp  tree.hpp  type_traits.hpp  utility.hpp
includes/: color.h  fdf.h  ft_stdio.h  libft.h  minishell.h  mouse.h  out_funcs.h  parse.h  parser.h  philo.h  push_swap.h  put_pixel.h
libft/: Makefile  TYPE_INT.h  ft_abs.c  ft_atoi.c  ft_atoi_base.c  ft_bignummultiply.c  ft_binary_search.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lst_init.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstadd_frontD.c  ft_lstadd_frontS.c  ft_lstclear.c  ft_lstdelone.c  ft_lstdeloneD.c  ft_lstfirst.c  ft_lstindex.c  ft_lstiter.c  ft_lstiterS.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstnewS.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_mergesort.c  (+26 more)
merge/: merge.c
minishell/: README.md
out_funcs/: .u_d_print.c.swp  c_print.c  char_print.c  di_print.c  digit_print.c  e_print.c  f_print.c  fe_print.c  feg_print.c  fge_special_cases.c  ft_double_as_bignum.c  ft_int_dec_symbs_counter.c  ft_putdouble.c  ft_putexp.c  ft_round_decimal.c  g_print.c  hex_print.c  out_funcs.c  pointer_print.c  str_print.c  u_d_print.c  u_digit_print.c  xX_print.c
parser/: args_check.c  expand_args.c  flags_parse.c  ft_vprintf.c  parse_specifier.c  precision_parse.c  presicion_parse.c  size_parse.c  specifier_parse.c  width_parse.c
philosophers/: .gitignore  Makefile
pipex/: .gitignore  Makefile
push_swap/: main.c
python_algo/: actions.py  additional.py  data_containers.py  divide.py  main.py  merge.py  push_swap.py
src/: count_islands.c  life.c  main.c  msg.c  myusleep.c  parse.c  philo.c  sit_down_please.c  test_and_debug.c  time.c  watchdog.c
srcs/: .env  central_point.c  (+16 more)
(+672 files in other folders)
